--- a/src/pages/profilo/profilo.html
+++ b/src/pages/profilo/profilo.html
@@ -18,7 +18,7 @@
       
         <ion-item>
           <ion-label>Email</ion-label>
-          <ion-input type="email" [(ngModel)]="email" [disabled]="notModifying"></ion-input>
+          <ion-input type="email" [(ngModel)]="email" [disabled]="true"></ion-input>
         </ion-item>
       
         <ion-item>
