PubblicaInserzione (Immagini mancanti e problema con filtriService)

--- a/src/pages/pubblica-inserzione/pubblica-inserzione.html
+++ b/src/pages/pubblica-inserzione/pubblica-inserzione.html
@@ -12,15 +12,7 @@
 
 </ion-header>
 
-CATEGORIA+
-MATERIALI+
 IMMAGINI
-----------
-TESTO+
-PREZZO+
-PAESE+
------------
-
 
 <ion-content padding>
   <ion-slides pager="true">
@@ -28,50 +20,41 @@ PAESE+
       <ion-list>
         <ion-item>
           <ion-label>Categoria</ion-label>
-          <ion-select placeholder="Select One">
-            <ion-option *ngFor="let categoria of categorie" value="{{categoria.id}}">{{categoria.nome}}</ion-option>
+          <ion-select [(ngModel)]="categoria" placeholder="Select One" ngDefaultControl>
+            <ion-option *ngFor="let categoria of categorie" value="{{categoria}}">{{categoria.nome}}</ion-option>
           </ion-select>
         </ion-item>
-
         <ion-item>
           <ion-label>Materiali</ion-label>
-          <ion-select placeholder="Select One">
-            <ion-option *ngFor="let materiale of materiali" value="{{materiale}}">{{materiale}}</ion-option>
+          <ion-select [(ngModel)]="materialiSelezionati" multiple="true" placeholder="Select Some" ngDefaultControl>
+            <ion-option *ngFor="let materiale of materiali" value="{{materiale}}">{{materiale.nome}}</ion-option>
           </ion-select>
         </ion-item>
-
         <ion-item>
-          <ion-label>Password</ion-label>
-          <ion-input type="{{passInputType}}" [(ngModel)]="password"></ion-input>
+          <ion-label>Paese</ion-label>
+          <ion-select [(ngModel)]="paese" placeholder="Select One" ngDefaultControl>
+            <ion-option *ngFor="let paese of paesi" value="{{paese}}">{{paese.nome}}</ion-option>
+          </ion-select>
         </ion-item>
-        <button (click)="showPassword()">
-          <ion-icon name="{{showingIcon}}"></ion-icon>
-        </button>
-
       </ion-list>
     </ion-slide>
     <ion-slide>
       <ion-list>
-          <ion-item>
-              <ion-label>Titolo</ion-label>
-              <ion-input placeholder="inserisci qui il titolo"></ion-input>
-            </ion-item>
+        <ion-item>
+          <ion-label>Titolo</ion-label>
+          <ion-input [(ngModel)]="titolo" placeholder="inserisci qui il titolo" ngDefaultControl></ion-input>
+        </ion-item>
         <ion-item>
           <ion-label>Descrizione</ion-label>
-          <ion-input placeholder="inserisci qui la descrizione"></ion-input>
+          <ion-input [(ngModel)]="descrizione"placeholder="inserisci qui la descrizione"  ngDefaultControl></ion-input>
         </ion-item>
         <ion-item>
-          <ion-label>Prezzo</ion-label>
-          <ion-input type="number" palceholder="0"></ion-input>
+          <ion-label  >Prezzo</ion-label>
+          <ion-input [(ngModel)]="prezzo" type="number" placeholder="0" ngDefaultControl></ion-input>
         </ion-item>
+
         <ion-item>
-          <ion-label>Paese</ion-label>
-          <ion-select placeholder="Select One">
-            <ion-option *ngFor="let paese of paesi" value="{{paese}}">{{paese}}</ion-option>
-          </ion-select>
-        </ion-item>
-        <ion-item>
-          <ion-button (click)="pubblica()" color="primary">Pubblica</ion-button>
+          <button (click)="pubblica()" color="primary">Pubblica</button>
         </ion-item>
       </ion-list>
     </ion-slide>
