--- a/src/pages/preferiti/preferiti.html
+++ b/src/pages/preferiti/preferiti.html
@@ -7,21 +7,34 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>Preferiti</ion-title>
+    <ion-title>{{"GUI_PREFERITI" | translate}}</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
-<ion-content padding>
-  <ion-item *ngFor="let inserzione of preferiti" (click)="preferitoTapped(inserzione.id)">
-    <ion-img item-left style="width: 50px; height: 50px;" src="https://via.placeholder.com/50"></ion-img>
-    <p text-wrap ion-text item-center style="color: black;"><b>{{inserzione.titolo}}</b></p>
-    <p ion-text item-center style="color: red;"><b>{{inserzione.prezzo}}€</b></p>
-    <p *ngIf="inserzione.dataPubblicazione.getMinutes() >= 10" ion-text item-center style="color: grey;">{{inserzione.dataPubblicazione.getFullYear()}}-{{inserzione.dataPubblicazione.getMonth()+1}}-{{inserzione.dataPubblicazione.getDate()}} {{inserzione.dataPubblicazione.getHours()}}:{{inserzione.dataPubblicazione.getMinutes()}} - {{inserzione.paese.nome}}</p>
-    <p *ngIf="inserzione.dataPubblicazione.getMinutes() < 10" ion-text item-center style="color: grey;">{{inserzione.dataPubblicazione.getFullYear()}}-{{inserzione.dataPubblicazione.getMonth()+1}}-{{inserzione.dataPubblicazione.getDate()}} {{inserzione.dataPubblicazione.getHours()}}:0{{inserzione.dataPubblicazione.getMinutes()}} - {{inserzione.paese.nome}}</p>
-    <button (click)="eliminaPreferito(inserzione.id)" ion-button icon-only item-right>
-      <ion-icon name="trash"></ion-icon>
-    </button>
+<ion-content>
+  <ion-list no-lines>
+  <ion-item *ngFor="let inserzione of preferiti">
+    <ion-card class="outer-card">
+      <ion-card-header (click)="preferitoTapped(inserzione.id)">
+        <ion-card (click)="preferitoTapped(inserzione.id)" class="img-card" [ngStyle]="{'background-image':'url(data:image/png;base64,'+inserzione.immagini[0] + ')'}"></ion-card>
+        <ion-card class="inner-card">
+        <h1>{{inserzione.titolo}}</h1>
+        <p>{{inserzione.dataPubblicazione | date:'dd/MM/yyyy HH:mm'}}</p>
+        <p *ngIf="getCurrentLang() == 'it'">{{inserzione.paese.nome}}</p>
+        <p *ngIf="getCurrentLang() == 'en'">{{inserzione.paese.nome_inglese}}</p>
+        </ion-card>
+      </ion-card-header>
+      <ion-card-content>
+        <button (click)="eliminaPreferito(inserzione.id)" ion-button icon-only item-right>
+          <ion-icon name="trash"></ion-icon>
+        </button>
+      </ion-card-content>
+  </ion-card>
+    
   </ion-item>
+</ion-list>
+  <ion-card *ngIf="preferiti.length == 0" class="img-card-no-preferiti"></ion-card>
+  <ion-item no-lines text-wrap *ngIf="preferiti.length == 0" id="no-preferiti-message">{{"GUI_NO_PREFERITI" | translate}}</ion-item>
 </ion-content>
