Pagine pubblica/modifica funzionanti in attesa di grafica

--- a/src/pages/mie-inserzioni/mie-inserzioni.html
+++ b/src/pages/mie-inserzioni/mie-inserzioni.html
@@ -30,7 +30,7 @@
           <button id="modifica-inserzione-button" (click)="modificaInserzione(inserzione.id)" ion-button icon-only item-right>
             <ion-icon name="build"></ion-icon>
           </button>
-          <button id="delete-inserzione-button" (click)="deleteInserzione(inserzione.id)" ion-button icon-only item-right>
+          <button id="delete-inserzione-button" (click)="showDeleteConfirmPopup(inserzione.id)" ion-button icon-only item-right>
             <ion-icon name="trash"></ion-icon>
           </button>
           
